fixed number alignment inside navbar
better allignment

--- a/css/style.css
+++ b/css/style.css
@@ -50,14 +50,14 @@ nav{
 .goto{
     display: inline-block;
     text-decoration: none;
+    line-height: 40px;
     text-align: center;
-    line-height: 25px;
+    vertical-align: middle;
     width: 40px;
     height: 40px;
     color:black;
     background-color: white;
     border-radius: 50%;
-    padding: .5rem;
     margin-right: 25px;
     filter: drop-shadow(4px 4px 0px black);
 }
